feat : completed other parts like preprocessing,risk identification and with accurate output

--- a/Dimentia_Analysis.ipynb
+++ b/Dimentia_Analysis.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SAJIDMIM/Dementia_Analysis/blob/feature%2Fdementia_analysis/Dimentia_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -23,7 +34,7 @@
         },
         "collapsed": true,
         "id": "Vxvfd2DShZbR",
-        "outputId": "a22c755e-e7d5-4370-bafa-adf6b5ad4de3"
+        "outputId": "9a42fd49-7d23-44a3-d55c-9810e81f4113"
       },
       "outputs": [
         {
@@ -188,7 +199,7 @@
         "id": "EfqAPDi1lXK2",
         "outputId": "1f7c8b25-b08b-4f6d-8910-be7b1de548f3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +290,7 @@
         "id": "Ov9vdIWTlfH9",
         "outputId": "4419c0d3-5508-474c-b60b-1c59ec291a92"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +349,7 @@
         "id": "L60YQ2umlwZ1",
         "outputId": "9df11c49-111e-47f7-a841-71b3c5685275"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +452,7 @@
         "id": "b6r0WYdzl0qD",
         "outputId": "1e080d1d-3b01-4864-b88f-714316580087"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +557,7 @@
         "id": "_H0MzGCUmKKU",
         "outputId": "86557adf-50bc-4c13-d349-9835dc7a3370"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +672,7 @@
         "id": "YV2f7-tepwRO",
         "outputId": "9f268323-e2b6-40a2-b951-d287b3191c61"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
