fix : Updated final code

--- a/Dimentia_Analysis_Model.ipynb
+++ b/Dimentia_Analysis_Model.ipynb
@@ -17,14 +17,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "Vxvfd2DShZbR",
-        "outputId": "052bdb9c-32bc-45e4-a442-c60cc6336add"
+        "outputId": "b4a210dc-47a7-41f7-8dee-c454b5258db8"
       },
       "outputs": [
         {
@@ -187,9 +187,9 @@
         },
         "collapsed": true,
         "id": "EfqAPDi1lXK2",
-        "outputId": "66899bc1-1c24-4d61-b8ea-98051caf4411"
+        "outputId": "6bffd506-d228-45c8-dede-b1fe28c70fbc"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +204,9 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF\n",
-            "From (redirected): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF&confirm=t&uuid=79997ca6-1c49-42b2-8df4-764cfc65cd1a\n",
+            "From (redirected): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF&confirm=t&uuid=726063b1-f592-45cb-9c96-1326d322e86a\n",
             "To: /content/NACC_dataset.csv\n",
-            "100%|██████████| 509M/509M [00:06<00:00, 84.7MB/s]\n"
+            "100%|██████████| 509M/509M [00:07<00:00, 71.8MB/s]\n"
           ]
         },
         {
@@ -278,15 +278,15 @@
         },
         "collapsed": true,
         "id": "Ov9vdIWTlfH9",
-        "outputId": "e963af99-ec42-4774-a49f-53789ab13077"
+        "outputId": "1d1417e9-b03d-4884-e52c-68e295796999"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "=== 🎯 SETTING UP RISK PREDICTION TARGET ===\n",
+            "===SETTING UP RISK PREDICTION TARGET ===\n",
             "Using current dementia status as a proxy for risk\n",
             "Interpretation: 1 = high risk of having or developing dementia\n",
             "\n",
@@ -337,9 +337,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L60YQ2umlwZ1",
-        "outputId": "c0e96067-072e-4eb0-b165-e146097f75f3"
+        "outputId": "6226e5b1-0438-43b8-d309-b6ba1f9ea01b"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,9 +440,9 @@
         },
         "collapsed": true,
         "id": "b6r0WYdzl0qD",
-        "outputId": "99128d29-fc82-4f52-c4e6-3983e6dfb32e"
+        "outputId": "af683377-f17a-4e47-d683-87f21db9efdc"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,9 +545,9 @@
         },
         "collapsed": true,
         "id": "_H0MzGCUmKKU",
-        "outputId": "eec0af02-c8dc-4ab9-9775-961c4a65e355"
+        "outputId": "ae43c425-0a28-44f0-e1c5-4a9676b2030f"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,9 +691,9 @@
         },
         "collapsed": true,
         "id": "YV2f7-tepwRO",
-        "outputId": "36baa4eb-9759-4ea0-b529-99e96a718468"
+        "outputId": "f5d8ffb5-cd07-4e53-c159-2828c55c1efd"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,9 +837,9 @@
         },
         "collapsed": true,
         "id": "8aARa_VSsY2t",
-        "outputId": "8488db24-fa3b-4b02-f750-d8952bc9efbd"
+        "outputId": "d18f42d4-0e04-4b46-8e08-c05cadad5bc6"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,9 +964,9 @@
         },
         "collapsed": true,
         "id": "hVZNJfVotR--",
-        "outputId": "5aabd0c5-c15f-4710-d25d-3ce2faf93765"
+        "outputId": "670046b2-5798-4ef5-acee-60850b4a8da8"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -6122,10 +6122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LA47Wt4juFXG",
-        "outputId": "3fdc59af-42f8-4a85-a223-b9cb5b631f5d",
-        "collapsed": true
+        "outputId": "956f51f1-26d2-4018-8475-039b285d9cb8"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
