feat : Resolved training data issue

--- a/Dimentia_Analysis_Model.ipynb
+++ b/Dimentia_Analysis_Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBBhbBDJTBFdS/dW9TnWc1"
+      "authorship_tag": "ABX9TyMU2lEMemQW4+zYd2fBR9VY"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,14 +17,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "Vxvfd2DShZbR",
-        "outputId": "b4a210dc-47a7-41f7-8dee-c454b5258db8"
+        "outputId": "64bcca32-3c91-4db2-ef8c-d3b01d372cf0"
       },
       "outputs": [
         {
@@ -187,9 +186,9 @@
         },
         "collapsed": true,
         "id": "EfqAPDi1lXK2",
-        "outputId": "6bffd506-d228-45c8-dede-b1fe28c70fbc"
+        "outputId": "b688ab49-c3ed-4d31-cac6-bb877c452a63"
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +203,9 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF\n",
-            "From (redirected): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF&confirm=t&uuid=726063b1-f592-45cb-9c96-1326d322e86a\n",
+            "From (redirected): https://drive.google.com/uc?id=19mKGPNFb35kG__3Eihazyv5O69ZUxDcF&confirm=t&uuid=5a2f86b6-bc4e-49b8-9bf3-dfb7c2d0bb10\n",
             "To: /content/NACC_dataset.csv\n",
-            "100%|██████████| 509M/509M [00:07<00:00, 71.8MB/s]\n"
+            "100%|██████████| 509M/509M [00:04<00:00, 112MB/s]\n"
           ]
         },
         {
@@ -276,11 +275,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "Ov9vdIWTlfH9",
-        "outputId": "1d1417e9-b03d-4884-e52c-68e295796999"
+        "outputId": "7a3dbfcd-f6c2-43df-e01d-ed7766f551b4"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,14 +330,13 @@
         "print(f\"Prepared dataset shapes: Features X={X.shape}, Target y={y.shape}\")\n"
       ],
       "metadata": {
-        "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "L60YQ2umlwZ1",
-        "outputId": "6226e5b1-0438-43b8-d309-b6ba1f9ea01b"
+        "outputId": "1b1af69b-1d91-4428-fb31-830e3bd1d016"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,9 +437,9 @@
         },
         "collapsed": true,
         "id": "b6r0WYdzl0qD",
-        "outputId": "af683377-f17a-4e47-d683-87f21db9efdc"
+        "outputId": "4562d9b1-e4c3-4d15-d850-9d0597ad39bd"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,52 +472,62 @@
       "source": [
         "# Step 6-12: Data preprocessing, feature selection, and preparation for modeling\n",
         "print(\"===DATA PREPARATION FOR RISK PREDICTION ===\")\n",
+        "print(f\"Initial data: X={X.shape}, y={y.shape}\")\n",
+        "\n",
+        "# Create a copy of the original data to preserve the structure\n",
+        "X_processed = X.copy()\n",
+        "y_processed = y.copy()\n",
         "\n",
         "#1️ Handle missing values\n",
-        "for col in X.columns:\n",
-        "    if X[col].dtype in ['int64', 'float64']:\n",
-        "        X[col].fillna(X[col].median(), inplace=True)\n",
+        "for col in X_processed.columns:\n",
+        "    if X_processed[col].dtype in ['int64', 'float64']:\n",
+        "        X_processed[col].fillna(X_processed[col].median(), inplace=True)\n",
         "    else:\n",
-        "        X[col].fillna(X[col].mode()[0] if len(X[col].mode()) > 0 else 0, inplace=True)\n",
+        "        X_processed[col].fillna(X_processed[col].mode()[0] if len(X_processed[col].mode()) > 0 else 0, inplace=True)\n",
         "\n",
         "#2️ Encode categorical variables\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
         "label_encoders = {}\n",
-        "categorical_cols = X.select_dtypes(include=['object']).columns\n",
+        "categorical_cols = X_processed.select_dtypes(include=['object']).columns\n",
         "for col in categorical_cols:\n",
         "    le = LabelEncoder()\n",
-        "    X[col] = le.fit_transform(X[col].astype(str))\n",
+        "    X_processed[col] = le.fit_transform(X_processed[col].astype(str))\n",
         "    label_encoders[col] = le\n",
         "\n",
         "print(\"Missing values handled and categorical variables encoded.\")\n",
         "\n",
         "#3️ Remove constant features\n",
-        "constant_features = [col for col in X.columns if X[col].nunique() <= 1]\n",
+        "constant_features = [col for col in X_processed.columns if X_processed[col].nunique() <= 1]\n",
         "if constant_features:\n",
-        "    X = X.drop(columns=constant_features)\n",
+        "    X_processed = X_processed.drop(columns=constant_features)\n",
         "    print(f\"Dropped constant features: {constant_features}\")\n",
         "\n",
         "#4️ Feature selection using univariate statistical test\n",
         "from sklearn.feature_selection import SelectKBest, f_classif\n",
         "\n",
-        "k = min(15, X.shape[1])  # Select top 15 features or less\n",
+        "k = min(15, X_processed.shape[1])  # Select top 15 features or less\n",
         "selector = SelectKBest(score_func=f_classif, k=k)\n",
-        "X_selected = selector.fit_transform(X, y)\n",
-        "selected_features = X.columns[selector.get_support()].tolist()\n",
+        "X_selected = selector.fit_transform(X_processed, y_processed)\n",
+        "selected_features = X_processed.columns[selector.get_support()].tolist()\n",
         "\n",
         "print(f\"Selected top {len(selected_features)} features for modeling:\")\n",
         "for i, feature in enumerate(selected_features, 1):\n",
         "    print(f\"  {i}. {feature}\")\n",
         "\n",
-        "X = X[selected_features]\n",
+        "X_processed = X_processed[selected_features]\n",
         "\n",
         "#5️ Train-test split\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+        "    X_processed, y_processed, test_size=0.2, random_state=42, stratify=y_processed\n",
         ")\n",
+        "\n",
+        "print(f\"After train-test split:\")\n",
+        "print(f\"  Training data: {X_train.shape[0]:,} samples\")\n",
+        "print(f\"  Test data: {X_test.shape[0]:,} samples\")\n",
+        "print(f\"  Total: {X_train.shape[0] + X_test.shape[0]:,} samples\")\n",
         "\n",
         "#6️ Scale features\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -535,25 +542,46 @@
         "smote = SMOTE(random_state=42)\n",
         "X_train_balanced, y_train_balanced = smote.fit_resample(X_train_scaled, y_train)\n",
         "\n",
-        "print(\"Data preprocessing, feature selection, scaling, and balancing completed!\")\n",
-        "print(f\"Final training data: X={X_train_balanced.shape}, y={y_train_balanced.shape}\")\n",
-        "print(f\"Test data: X={X_test_scaled.shape}, y={y_test.shape}\")\n"
+        "print(\"\\nData preprocessing, feature selection, scaling, and balancing completed!\")\n",
+        "print(f\"Final training data (after SMOTE): X={X_train_balanced.shape}, y={y_train_balanced.shape}\")\n",
+        "print(f\"Test data: X={X_test_scaled.shape}, y={y_test.shape}\")\n",
+        "print(f\"Total processed samples: {X_train_balanced.shape[0] + X_test_scaled.shape[0]:,}\")\n",
+        "\n",
+        "# Verify the total data integrity\n",
+        "print(f\"\\n=== DATA INTEGRITY CHECK ===\")\n",
+        "print(f\"Original data size: {X.shape[0]:,}\")\n",
+        "print(f\"Training data (balanced): {X_train_balanced.shape[0]:,}\")\n",
+        "print(f\"Test data: {X_test_scaled.shape[0]:,}\")\n",
+        "print(f\"SMOTE applied: {X_train_balanced.shape[0] - X_train.shape[0]:,} synthetic samples added\")\n",
+        "print(f\"Note: SMOTE increases training samples to handle class imbalance\")\n",
+        "\n",
+        "# Prepare final datasets for modeling\n",
+        "X_train_final = X_train_balanced\n",
+        "y_train_final = y_train_balanced\n",
+        "X_test_final = X_test_scaled\n",
+        "y_test_final = y_test\n",
+        "\n",
+        "print(f\"\\nDatasets ready for modeling:\")\n",
+        "print(f\"X_train_final: {X_train_final.shape}\")\n",
+        "print(f\"y_train_final: {y_train_final.shape}\")\n",
+        "print(f\"X_test_final: {X_test_final.shape}\")\n",
+        "print(f\"y_test_final: {y_test_final.shape}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "_H0MzGCUmKKU",
-        "outputId": "ae43c425-0a28-44f0-e1c5-4a9676b2030f"
+        "outputId": "36f343d6-d5ce-4d8c-e4ed-34c576b704ac"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "===DATA PREPARATION FOR RISK PREDICTION ===\n",
+            "Initial data: X=(195196, 15), y=(195196,)\n",
             "Missing values handled and categorical variables encoded.\n",
             "Selected top 15 features for modeling:\n",
             "  1. SEX\n",
@@ -571,9 +599,28 @@
             "  13. STOVE\n",
             "  14. MEALPREP\n",
             "  15. TRAVEL\n",
+            "After train-test split:\n",
+            "  Training data: 156,156 samples\n",
+            "  Test data: 39,040 samples\n",
+            "  Total: 195,196 samples\n",
+            "\n",
             "Data preprocessing, feature selection, scaling, and balancing completed!\n",
-            "Final training data: X=(220168, 15), y=(220168,)\n",
-            "Test data: X=(39040, 15), y=(39040,)\n"
+            "Final training data (after SMOTE): X=(220168, 15), y=(220168,)\n",
+            "Test data: X=(39040, 15), y=(39040,)\n",
+            "Total processed samples: 259,208\n",
+            "\n",
+            "=== DATA INTEGRITY CHECK ===\n",
+            "Original data size: 195,196\n",
+            "Training data (balanced): 220,168\n",
+            "Test data: 39,040\n",
+            "SMOTE applied: 64,012 synthetic samples added\n",
+            "Note: SMOTE increases training samples to handle class imbalance\n",
+            "\n",
+            "Datasets ready for modeling:\n",
+            "X_train_final: (220168, 15)\n",
+            "y_train_final: (220168,)\n",
+            "X_test_final: (39040, 15)\n",
+            "y_test_final: (39040,)\n"
           ]
         }
       ]
@@ -693,7 +740,7 @@
         "id": "YV2f7-tepwRO",
         "outputId": "f5d8ffb5-cd07-4e53-c159-2828c55c1efd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,7 +886,7 @@
         "id": "8aARa_VSsY2t",
         "outputId": "d18f42d4-0e04-4b46-8e08-c05cadad5bc6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -962,11 +1009,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "hVZNJfVotR--",
         "outputId": "670046b2-5798-4ef5-acee-60850b4a8da8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6124,7 +6170,7 @@
         "id": "LA47Wt4juFXG",
         "outputId": "956f51f1-26d2-4018-8475-039b285d9cb8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
